--- a/src/main/webapp/resources/style/style-menu.css
+++ b/src/main/webapp/resources/style/style-menu.css
@@ -1,6 +1,6 @@
 .personal-area-menu {
-  padding: 10px;
-  width: 100%;
+  width: 95vw;
+  padding: 20px;
 }
 .personal-area-menu .personal-area-menu-list {
   display: flex;
@@ -8,8 +8,11 @@
   align-items: center;
 }
 .personal-area-menu .personal-area-menu-list .menu-button {
-  font-size: 18px;
-  color: black;
+  font-size: 25px;
+  margin: 0 30px;
+}
+.personal-area-menu .personal-area-menu-list .active-menu-link {
+  color: white;
 }
 
 /*# sourceMappingURL=style-menu.css.map */
