--- a/src/main/webapp/resources/style/style-menu.scss
+++ b/src/main/webapp/resources/style/style-menu.scss
@@ -1,11 +1,16 @@
 .personal-area-menu{
-  padding: 10px; width: 100%;
+  width: 95vw; padding: 20px;
 
   .personal-area-menu-list{
     display: flex; justify-content: center; align-items: center;
 
     .menu-button{
-      font-size: 18px; color: black;
+      font-size: 25px;
+      margin: 0 30px;
+    }
+
+    .active-menu-link{
+      color: white;
     }
 
   }
