--- a/src/main/webapp/resources/style/style-funds.scss
+++ b/src/main/webapp/resources/style/style-funds.scss
@@ -63,7 +63,7 @@ header{
 
 .transfer-funds-form{
 
-  @include displayFlex(column, center, center); display: none; position: absolute; width: 100vw;
+  @include displayFlex(column, center, center); position: absolute; width: 100vw;
   height: 100vh; background-color: rgba(0, 0, 0, 0.49); top: 0; left: 0; z-index: 100;
 
   form{
