--- a/src/main/webapp/resources/style/style-menu.scss
+++ b/src/main/webapp/resources/style/style-menu.scss
@@ -2,7 +2,7 @@
   width: 95vw; padding: 20px;
 
   .personal-area-menu-list{
-    display: flex; justify-content: center; align-items: center;
+    display: flex; justify-content: left; align-items: center;
 
     .menu-button{
       font-size: 25px;
