--- a/src/main/webapp/resources/style/style-funds.css
+++ b/src/main/webapp/resources/style/style-funds.css
@@ -65,14 +65,15 @@ header {
   position: relative;
 }
 
-.transfer-funds-form {
+main {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 5%;
+  height: 60vh;
+  padding-bottom: 20vh;
 }
-.transfer-funds-form form {
+main form {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -83,7 +84,7 @@ header {
   padding: 40px 40px;
   position: relative;
 }
-.transfer-funds-form form .close-pop-up {
+main form .close-pop-up {
   position: absolute;
   top: 5px;
   right: 5px;
@@ -92,7 +93,7 @@ header {
   color: #e5e837;
   cursor: pointer;
 }
-.transfer-funds-form form .form-group-wrapper {
+main form .form-group-wrapper {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -101,18 +102,18 @@ header {
   position: relative;
   padding: 15px 0 0;
 }
-.transfer-funds-form form .form-button-label {
+main form .form-button-label {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-top: 30px;
 }
-.transfer-funds-form form .form-group {
+main form .form-group {
   position: relative;
   width: 48%;
 }
-.transfer-funds-form form .form-field {
+main form .form-field {
   font-family: inherit;
   width: 100%;
   border-bottom: 2px solid rgb(254, 159, 151);
@@ -123,15 +124,15 @@ header {
   background: transparent;
   transition: 0.8s;
 }
-.transfer-funds-form form .form-field::placeholder {
+main form .form-field::placeholder {
   color: transparent;
 }
-.transfer-funds-form form .form-field:placeholder-shown ~ .form-label {
+main form .form-field:placeholder-shown ~ .form-label {
   font-size: 18px;
   cursor: text;
   top: 20px;
 }
-.transfer-funds-form form .form-label {
+main form .form-label {
   position: absolute;
   top: 0;
   display: block;
@@ -139,13 +140,13 @@ header {
   font-size: 18px;
   color: rgb(254, 159, 151);
 }
-.transfer-funds-form form .form-field:focus {
+main form .form-field:focus {
   padding-bottom: 5px;
   font-weight: 500;
   border-width: 3px;
   border-color: rgb(254, 159, 151); /*linear-gradient(to right, $primary, $secondary); border-image-slice: 1;*/
 }
-.transfer-funds-form form .form-field:focus ~ .form-label {
+main form .form-field:focus ~ .form-label {
   position: absolute;
   top: -5;
   display: block;
