--- a/src/main/webapp/resources/style/style-funds.css
+++ b/src/main/webapp/resources/style/style-funds.css
@@ -33,7 +33,7 @@ h1 {
 
 a {
   font-size: 16px;
-  color: rgba(254, 159, 151, 0.66);
+  color: rgb(254, 159, 151);
   font-weight: 300;
   letter-spacing: 1.2px;
 }
@@ -51,7 +51,7 @@ a:hover {
   margin: 0 20px 0;
 }
 .button:hover {
-  background-color: rgba(254, 159, 151, 0.66);
+  background-color: rgb(254, 159, 151);
   color: #000;
   transform: scale(1.1);
 }
@@ -76,14 +76,15 @@ main {
 }
 main .note-message {
   margin: 50px 0;
-  background-color: rgba(254, 159, 151, 0.66);
-  font-size: 16px;
-  color: white;
+  background-color: rgba(254, 159, 151, 0.1254901961);
   padding: 20px;
-  width: 510px;
+  width: 550px;
 }
 main .note-message p {
   text-align: center;
+  font-size: 18px;
+  color: #fe9f97;
+  line-height: 24px;
 }
 main .funds-info {
   flex-wrap: wrap;
@@ -182,7 +183,7 @@ main form .form-group {
 main form .form-field {
   font-family: inherit;
   width: 100%;
-  border-bottom: 2px solid rgba(254, 159, 151, 0.66);
+  border-bottom: 2px solid rgb(254, 159, 151);
   outline: 0;
   font-size: 18px;
   color: #fff;
@@ -204,13 +205,13 @@ main form .form-label {
   display: block;
   transition: 0.8s;
   font-size: 18px;
-  color: rgba(254, 159, 151, 0.66);
+  color: rgb(254, 159, 151);
 }
 main form .form-field:focus {
   padding-bottom: 5px;
   font-weight: 500;
   border-width: 3px;
-  border-color: rgba(254, 159, 151, 0.66); /*linear-gradient(to right, $primary, $secondary); border-image-slice: 1;*/
+  border-color: rgb(254, 159, 151); /*linear-gradient(to right, $primary, $secondary); border-image-slice: 1;*/
 }
 main form .form-field:focus ~ .form-label {
   position: absolute;
