--- a/src/main/webapp/resources/style/style-menu.css
+++ b/src/main/webapp/resources/style/style-menu.css
@@ -1,17 +1,18 @@
-.personal-area-menu {
+.menu {
   width: 95vw;
   padding: 20px;
 }
-.personal-area-menu .personal-area-menu-list {
+.menu .menu-list {
   display: flex;
   justify-content: left;
   align-items: center;
 }
-.personal-area-menu .personal-area-menu-list .menu-button {
-  font-size: 25px;
+.menu .menu-list .menu-button {
+  font-size: 20px;
   margin: 0 30px;
+  text-transform: uppercase;
 }
-.personal-area-menu .personal-area-menu-list .active-menu-link {
+.menu .menu-list .active-menu-link {
   color: white;
 }
 
