--- a/src/main/webapp/resources/style/style-admin.css
+++ b/src/main/webapp/resources/style/style-admin.css
@@ -110,7 +110,7 @@ main .display-section .display-scroll-wrapper {
   align-items: flex-start;
   height: 400px;
   width: 100%;
-  overflow-x: hidden;
+  overflow-x: scroll;
   align-items: center;
 }
 @media (min-width: 767px) {
@@ -134,7 +134,7 @@ main .display-section .display-scroll-wrapper .table-titles-section {
   align-items: flex-start;
   height: auto;
   width: 100%;
-  overflow-x: scroll;
+  /*overflow-x: scroll;*/
   align-items: center;
 }
 main .display-section .display-scroll-wrapper .table-titles-section div {
@@ -151,7 +151,7 @@ main .display-section .display-scroll-wrapper .table-titles-section div p {
   font-weight: 600;
   text-align: center;
 }
-main .display-section .display-scroll-wrapper .table-titles-section .content-table-inner {
+main .display-section .display-scroll-wrapper .content-table-inner {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -161,7 +161,7 @@ main .display-section .display-scroll-wrapper .table-titles-section .content-tab
   overflow-x: scroll;
   align-items: center;
 }
-main .display-section .display-scroll-wrapper .table-titles-section .content-table-inner div {
+main .display-section .display-scroll-wrapper .content-table-inner div {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -171,10 +171,10 @@ main .display-section .display-scroll-wrapper .table-titles-section .content-tab
   transition: 0.3s;
   cursor: pointer;
 }
-main .display-section .display-scroll-wrapper .table-titles-section .content-table-inner div:hover {
+main .display-section .display-scroll-wrapper .content-table-inner div:hover {
   background-color: rgba(255, 255, 255, 0.1803921569);
 }
-main .display-section .display-scroll-wrapper .table-titles-section .content-table-inner div p {
+main .display-section .display-scroll-wrapper .content-table-inner div p {
   min-width: 175px;
   font-size: 16px;
   color: rgb(254, 159, 151);
