--- a/src/main/webapp/resources/style/style-admin.css
+++ b/src/main/webapp/resources/style/style-admin.css
@@ -123,7 +123,7 @@ main .display-section .display-scroll-wrapper {
 @media (min-width: 1024px) {
   main .display-section .display-scroll-wrapper {
     /*width: 1050px;*/
-    overflow-x: hidden;
+    overflow-x: scroll;
     height: 400px;
   }
 }
@@ -158,7 +158,7 @@ main .display-section .display-scroll-wrapper .content-table-inner {
   align-items: flex-start;
   height: auto;
   width: 100%;
-  overflow-x: scroll;
+  /*overflow-x: scroll;*/
   align-items: center;
 }
 main .display-section .display-scroll-wrapper .content-table-inner div {
