additional fields added

--- a/src/main/webapp/resources/style/style-admin.scss
+++ b/src/main/webapp/resources/style/style-admin.scss
@@ -98,7 +98,7 @@ main {
       height: 400px;
       width: 100%;
       overflow-x: scroll;
-      align-items: center;
+      //align-items: center;
 
       @media (min-width: 767px) {
         /*width: 600px;*/
